--- a/html/input.html
+++ b/html/input.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Form to add dogs</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -11,15 +11,15 @@
 <body>
 
 <div class="container">
-  <h2>Vertical (basic) form</h2>
-  <form role="form">
+  <h2>Dog Registration Form</h2>
+  <form role="form" action="/check" method="POST">
     <div class="form-group">
       <label>Name:</label>
-      <input type="text" class="form-control" id="email" placeholder="Enter email">
+      <input type="text" class="form-control" id="name" placeholder="Name">
     </div>
     <div class="form-group">
-      <label>Breed:</label>
-      <input type="text" class="form-control" id="pwd" placeholder="Enter password">
+      <label>Colour:</label>
+      <input type="text" class="form-control" id="color" placeholder="Colour">
     </div>
     <div class="checkbox">
       <label><input type="checkbox"> Remember me</label>
