--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Test</title>
-    <script src="/static/bundle.js" type="text/javascript"></script>
 </head>
-<body>
 
+<body>
+    <div id="app"></div>
+    <script src="/static/bundle.js" type="text/javascript"></script>
 </body>
+
 </html>
